# coil

./: CHANGES.txt  DESIGN.txt  DOC.txt  GOALS.txt  LICENSE.txt  ProjectHome.md  README.txt  TODO.txt  coil.py  setup.py
coil/: __init__.py  errors.py  parser.py  render.py  struct.py  text.py  tokenizer.py
coil-0.1/: .gitignore  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h.in  configure  configure.ac
coil-0.1/coil/: Makefile.am  Makefile.in  coil.c  coil.h  coil_error.c  coil_error.h  coil_expandable.c  coil_expandable.h  coil_include.c  coil_include.h  coil_link.c  coil_link.h  coil_list.c  coil_list.h  coil_none.c  coil_none.h  coil_parser.y  coil_parser_extras.h  coil_path.c  coil_path.h  coil_scanner.l  coil_struct.c  coil_struct.h  coil_value.c  coil_value.h  coildebug.c
coil-0.1/tests/: Makefile.am  Makefile.in
coil-0.1/tests/benchmark/: Makefile.in
coil-0.1/tests/functional/: Makefile.in  run_functional_tests.c
coil-0.1/tests/functional/cases/fail/: test_failure.coil
coil-0.1/tests/functional/cases/pass/: test_comments.coil  test_extends_chain.coil
coil-0.1/tests/unit/: Makefile.am  Makefile.in
coil-0.1/tests/unit/suites/: test_path.c  test_struct.c  test_value.c
coil/test/: complex.coil  example.coil  example2.coil  test_leaf.py  test_link.py  test_list.py  test_node.py  test_parser.py  test_render.py  test_struct.py  test_text.py  test_tokenizer.py
debian/: HOWTO.txt  changelog  control  copyright  docs  python-coil.preinst  rules
docs/: api.rst  api_overview.rst  changelog.rst  conf.py  dev_guide.rst  index.rst  introduction.rst  legacy_api.rst  text_format.rst  user_guide.rst
misc/: gen-readme.sh
misc/vim/syntax/: coil.vim
trunk/coil/: __init__.py  parser.py
trunk/coil/test/: test_parser.py  test_struct.py
trunk/docs/: Makefile  conf.py  user_guide.rst
trunk/misc/vim/ftdetect/: coil.vim
